--- a/.github/workflows/MavenCI.yml
+++ b/.github/workflows/MavenCI.yml
@@ -18,8 +18,8 @@ jobs:
       max-parallel: 5
       fail-fast: false
       matrix:
-        operating-system: [ubuntu-latest, windows-latest, macos-latest]
-        java-version: ['8', '9', '11', '13']
+        operating-system: [ubuntu-latest]
+        java-version: ['8', '11']
 
     steps:
     - uses: actions/checkout@v2
